Add an api to update taxon group

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -290,289 +290,16 @@
 {% block foot %}
 
     <!-- Plugin JavaScript -->
-    <script></script>
+    <script>
+        let csrfToken = '{{ csrf_token }}';
+
+    </script>
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/non_requirejs/taxa_management.js" %}"></script>
 
     <script>
-        let taxaListCurrentUrl = '';
-        let selectedTaxonGroup = '';
-        let urlDownload = '/download-csv-taxa-list/';
 
-        $("#sortable").sortable({
-            stop: function (event, ui) {
-                let $li = $(event.target).find('li');
-                let ids = [];
-                $.each($li, function (index, element) {
-                    ids.push($(element).data('id'));
-                });
-                console.log(ids);
-            }
-        });
-
-        const getTaxaList = (url) => {
-            taxaListCurrentUrl = url;
-            $('.download-button-container').show();
-            $.get(url).then(
-                function (response) {
-                    let $taxaList = $('#taxa-list');
-                    let $pagination = $('.pagination-centered');
-                    let paginationNext = $('.pagination-next');
-                    let paginationPrev = $('.pagination-previous');
-
-                    // Get current page by parsing the next url
-                    let currentPage = 1;
-                    let taxaCurrentSize = 0;
-                    if (response['next']) {
-                        let url = new URL(response['next']);
-                        let page = url.searchParams.get('page');
-                        currentPage = page - 1;
-                        taxaCurrentSize = currentPage * 20;
-                    }
-                    if (!response['next'] && response['previous']) {
-                        let url = new URL(response['previous']);
-                        currentPage = parseInt(url.searchParams.get('page')) + 1;
-                        taxaCurrentSize = response['count']
-                    }
-                    $taxaList.html('');
-                    $.each(response['results'], function (index, data) {
-                        let name = data['canonical_name'];
-                        if (!name) {
-                            name = data['scientific_name'];
-                        }
-                        let rowAction = $('.row-action').clone();
-                        rowAction.removeClass('.row-action');
-                        $taxaList.append(`<tr><td>${name}</td><td>${data['rank']}</td><td>${data['import_date']}</td><td>${rowAction.html()}</td></tr>`);
-                    });
-                    if (response['next'] == null && response['previous'] == null) {
-                        $pagination.hide();
-                    } else {
-                        $('#taxa-count').html(response['count']);
-                        $('#taxa-current-size').html(taxaCurrentSize);
-                        $('#taxa-current-page').html((currentPage * 20) - 19);
-                        $pagination.show();
-                        if (response['next']) {
-                            paginationNext.show();
-                            paginationNext.off('click');
-                            paginationNext.click(() => {
-                                getTaxaList(response['next']);
-                            })
-                        } else {
-                            paginationNext.hide();
-                        }
-                        if (response['previous']) {
-                            paginationPrev.show();
-                            paginationPrev.off('click');
-                            paginationPrev.click(() => {
-                                getTaxaList(response['previous']);
-                            })
-                        } else {
-                            paginationPrev.hide();
-                        }
-                    }
-                }
-            )
-        }
-
-        $('.ui-state-default').click(function (e) {
-            let $elm = $(e.target);
-            let maxTry = 10;
-            let currentTry = 1;
-            while (!$elm.hasClass('ui-state-default') && currentTry < maxTry) {
-                currentTry++;
-                $elm = $elm.parent();
-            }
-            $('.ui-state-default').removeClass('selected');
-            $elm.addClass('selected');
-            selectedTaxonGroup = $elm.data('id');
-            $('#taxon-name-input').val('');
-            getTaxaList(`/api/taxa-list/?taxonGroup=${selectedTaxonGroup}`);
-        })
-
-        $('#search-button').click(function (e) {
-            if (!taxaListCurrentUrl) {
-                return true;
-            }
-            let taxonNameInput = $('#taxon-name-input');
-            let taxonName = taxonNameInput.val();
-            getTaxaList(`/api/taxa-list/?taxonGroup=${selectedTaxonGroup}&taxon=${taxonName}`);
-        });
-
-        $('#download-csv').click(function (e) {
-            let a = document.createElement("a");
-            let url = urlDownload + '?taxonGroup=' + selectedTaxonGroup;
-            let taxonName = $('#taxon-name-input').val();
-            if (taxonName) {
-                url += '&taxon=' + taxonName;
-            }
-            a.href = url;
-            let fileName = 'taxa-list.csv';
-            a.download = fileName;
-            document.body.appendChild(a);
-            a.click();
-            window.URL.revokeObjectURL(urlDownload);
-            a.remove();
-        });
-
-        $('#find-taxon-button').click(function () {
-            let taxonName = $('#add-taxon-input').val();
-            if (!taxonName) {
-                return false;
-            }
-            // Show loading div
-            let table = $('.find-taxon-table');
-            table.hide();
-            let loading = $('.find-taxon-loading');
-            loading.show();
-            let $newTaxonForm = $('.new-taxon-form');
-            $newTaxonForm.hide();
-
-            // Show response list
-            $.ajax({
-                url: `/api/find-taxon/?q=${taxonName}&status=accepted&taxonGroup=fish`,
-                type: 'get',
-                dataType: 'json',
-                success: function (data) {
-                    if (data.length > 0) {
-                        populateFindTaxonTable(table, data);
-                    } else {
-                        showNewTaxonForm(taxonName);
-                    }
-                    loading.hide();
-                }
-            });
-        });
-
-        function showNewTaxonForm(taxonName) {
-            let $taxonForm = $('.new-taxon-form');
-            let $button = $taxonForm.find('.add-new-taxon-btn');
-            let $rank = $taxonForm.find('.new-taxon-rank');
-            let capitalizedTaxonName = taxonName.substr(0, 1).toUpperCase() + taxonName.substr(1).toLowerCase();
-            let $newTaxonNameInput = $('#new-taxon-name');
-            $button.click(function () {
-                $taxonForm.hide();
-                addNewTaxonToObservedList(capitalizedTaxonName, '', $rank.val());
-            });
-            $newTaxonNameInput.val(capitalizedTaxonName);
-            $taxonForm.show();
-        }
-
-        function populateFindTaxonTable(table, data) {
-            let tableBody = table.find('tbody');
-            tableBody.html('');
-            let gbifImage = '<img src="/static/img/GBIF-2015.png" width="50">';
-            $.each(data, function (index, value) {
-                let source = value['source'];
-                let scientificName = value['scientificName'];
-                let canonicalName = value['canonicalName'];
-                let rank = value['rank'];
-                let key = value['key'];
-                let taxaId = value['taxaId'];
-                let stored = value['storedLocal'];
-
-                if (source === 'gbif') {
-                    source = `<a href="https://www.gbif.org/species/${key}" target="_blank">${gbifImage}</a>`;
-                } else if (source === 'local') {
-                    source = fontAwesomeIcon('database');
-                }
-                if (stored) {
-                    stored = fontAwesomeIcon('check', 'green');
-                } else {
-                    stored = fontAwesomeIcon('times', 'red');
-                }
-                let action = (`<button
-                                type="button"
-                                onclick="addNewTaxonToObservedList('${canonicalName}',${key},'${rank}',${taxaId})"
-                                class="btn btn-success">${fontAwesomeIcon('plus')}&nbsp;ADD
-                               </button>`);
-                tableBody.append(`<tr>
-                            <td>${scientificName}</td>
-                            <td>${canonicalName}</td>
-                            <td>${rank}</td>
-                            <td>${source}</td>
-                            <td>${stored}</td>
-                            <td>${action}</td>
-                        </tr>`);
-            });
-            table.show();
-        }
-
-        function addNewTaxonToObservedList(name, gbifKey, rank, taxaId = null) {
-            let postData = {
-                'gbifKey': gbifKey,
-                'taxonName': name,
-                'rank': rank,
-                'taxonGroup': taxonGroupName,
-                'csrfmiddlewaretoken': csrfToken
-            };
-            let table = $('.find-taxon-table');
-            table.hide();
-            let loading = $('.find-taxon-loading');
-            loading.show();
-
-            if (taxaId) {
-                $('#addNewTaxonModal').modal('toggle');
-                loading.hide();
-                $('#add-taxon-input').val('');
-
-                if (taxaIdList.indexOf(taxaId + '') === -1) {
-                    renderNewTaxon(taxaId, name);
-                } else {
-                    let div = $('.taxon-table-body').find(`.taxon-id[value="${taxaId}"]`);
-                    if (div.length) {
-                        div = div.parent().parent();
-                        div.scrollHere();
-                        div.highlight();
-                    }
-                }
-                return true;
-            }
-
-            $.ajax({
-                url: `/api/add-new-taxon/`,
-                type: 'POST',
-                data: postData,
-                success: function (data) {
-                    $('#addNewTaxonModal').modal('toggle');
-                    renderNewTaxon(data['id'], name);
-                    loading.hide();
-                    $('#add-taxon-input').val('');
-                }
-            });
-        }
-
-        // Add new taxon row to the existing taxa list
-        function renderNewTaxon(taxonId, taxonName) {
-            let $container = $('.taxon-table-body');
-            taxaIdList.push(taxonId + '');
-            let $row = $('<tr>');
-            $row.html(
-                '<td scope="row" class="taxon-name">' +
-                taxonName +
-                '<input type="hidden" class="taxon-id" value="' + taxonId + '">' +
-                '</td>');
-            $row.append(
-                '<td>' +
-                '<div class="form-check">' +
-                '<input class="form-check-input observed" type="checkbox"' +
-                ' value="True"' +
-                ' name="' + taxonId + '-observed">' +
-                ' <label class="form-check-label">' +
-                ' </label>' +
-                '</div>' +
-                '</td>');
-            let taxonAbundanceInput = $('<input type="number" min="0"' +
-                ' name="' + taxonId + '-abundance"' +
-                ' class="form-control taxon-abundance"' +
-                ' placeholder="0">');
-            let tdTaxonAbundance = $('<td>');
-            tdTaxonAbundance.append(taxonAbundanceInput);
-            $row.append(tdTaxonAbundance);
-            $container.prepend($row);
-            $row.scrollHere();
-            $row.highlight();
-            taxonAbundanceInput.change(taxonAbundanceOnChange);
-        }
     </script>
 {% endblock %}
