--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -99,11 +99,42 @@
             font-size: 10pt;
         }
 
+        /* Absolute Center Spinner */
+        .loading {
+            position: fixed;
+            z-index: 9999;
+            height: 2em;
+            width: 2em;
+            overflow: show;
+            margin: auto;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+        }
+
+        /* Transparent Overlay */
+        .loading:before {
+            content: '';
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(rgba(116, 116, 116, 0.63), rgba(0, 0, 0, .8));
+            background: -webkit-radial-gradient(rgba(130, 130, 130, 0.8), rgba(73, 73, 73, 0.8));
+        }
+
     </style>
 
 {% endblock %}
 
 {% block body_content %}
+    <div class="loading">
+        <img src="/static/img/small-loading.svg" width="150" style="filter: brightness(104%) contrast(97%);"
+                             alt="Loading view">
+    </div>
     <div class="body-form container">
         <div class="dashboard-title">
             <h2>Taxa management</h2>
@@ -124,7 +155,7 @@
                                 </div>
                                 <div>
                                     Total taxonomy
-                                    : {{ taxa_group.taxonomies.count }}
+                                    : <span id="taxon_group_{{ taxa_group.id }}">{{ taxa_group.taxonomies.count }}</span>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +223,7 @@
     <div class="row-action" style="display: none">
         <td>
             <button class="btn btn-action btn-warning">Edit</button>
-            <button class="btn btn-action btn-danger">Remove from group
+            <button class="btn btn-action btn-danger remove-taxon-from-group">Remove from group
             </button>
         </td>
     </div>
