Update remove taxon from taxon group api

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -1,7 +1,7 @@
 {% extends 'main_base.html' %}
 {% load static from staticfiles %}
 {% block subtitle %}
-    Site visit list
+    Taxa management
 {% endblock %}
 
 {% block head %}
@@ -222,7 +222,6 @@
 
     <div class="row-action" style="display: none">
         <td>
-            <button class="btn btn-action btn-warning">Edit</button>
             <button class="btn btn-action btn-danger remove-taxon-from-group">Remove from group
             </button>
         </td>
