--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -224,6 +224,8 @@
         <td>
             <button class="btn btn-action btn-danger remove-taxon-from-group">Remove from group
             </button>
+            <a href="" class="btn btn-action btn-warning edit-taxon" onclick="windowpop(this.href, 800, 600)">Edit
+            </a>
         </td>
     </div>
 
