--- a/bims/templates/taxa_uploader.html
+++ b/bims/templates/taxa_uploader.html
@@ -172,7 +172,7 @@
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script type="text/javascript">
 
-        const updateUrl = "/api/taxa-upload-status/";
+        const updateUrl = "/api/upload-status/";
 
         const updateProgress = (id, $elm) => {
             setTimeout(function () {
